logout - redis token storage - update user
